<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#167dff"
        android:gravity="center|left">

        <TextView
            android:id="@+id/tv_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_arrow_back_white_24dp"
            android:gravity="center"
            android:inputType="textPersonName"
            android:text="@string/sign_up"
            android:textColor="#FFF"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:background="@drawable/ic_background"></LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <EditText
            android:layout_weight="1"
            android:id="@+id/edt_display_name"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/ic_button"
            android:hint="@string/display_name"
            android:paddingLeft="16dp"
            android:textSize="16sp" />

        <EditText
            android:layout_weight="1"
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/ic_button"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingLeft="16dp"
            android:textSize="16sp" />

        <EditText
            android:layout_weight="1"
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/ic_button"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingLeft="16dp"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <Button
            android:layout_weight="2"
            android:id="@+id/btn_get_start"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:background="#167dff"
            android:text="@string/get_started"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />

        <TextView
            android:layout_weight="0.5"
            android:id="@+id/tv_terms"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@string/terms_and_conditions"
            android:textColor="#167dff"
            android:layout_marginBottom="8dp"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>