<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:background="#167dff"
        android:gravity="center|left">

        <TextView
            android:id="@+id/tv_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_arrow_back_white_24dp"
            android:gravity="center"
            android:text="@string/sign_in"
            android:textColor="#FFF"
            android:textSize="18sp" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_lapit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="48dp"
            android:text="@string/lap_it"
            android:textAllCaps="true"
            android:textColor="#167dff"
            android:textSize="36sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_lapit"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:text="@string/content_lap_it"
            android:textColor="#FFBFBFBF"
            android:textSize="16dp"
            android:textStyle="bold" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <EditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:background="@drawable/ic_button"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingLeft="16dp"
            android:textSize="16dp" />

        <EditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:background="@drawable/ic_button"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingLeft="16dp"
            android:textSize="16dp" />

        <Button
            android:id="@+id/btn_sign_in"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:background="#167dff"
            android:text="@string/sign_in" />

        <TextView
            android:gravity="center"
            android:layout_marginBottom="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/terms_and_conditions"
            android:textColor="#167dff" />
    </LinearLayout>
</LinearLayout>